--- a/spares_info/templates/spares_info/shops.html
+++ b/spares_info/templates/spares_info/shops.html
@@ -12,34 +12,13 @@
 
 {% block body %}
     <div class="row">
-        <div class="col-md-2">
-            <a href="{% url 'shops' 1 %}" class="thumbnail">
-                <img src="{% static 'img/shop1.jpg' %}">
-                hello
+        {% for shop in shops %}
+        <div class="col-md-3">
+            <a href="{% url 'shops' shop.id %}" class="thumbnail">
+                <img src="{{ shop.photo }}">
+                {{ shop.address }}
             </a>
         </div>
-        <div class="col-md-2">
-            <a href="{% url 'shops' 2 %}" class="thumbnail">
-                <img src="{% static 'img/shop2.jpg' %}">
-                hello
-            </a>
-        </div>
-        <div class="col-md-2">
-            <a href="{% url 'shops' 3 %}" class="thumbnail">
-                <img src="{% static 'img/shop3.jpg' %}">
-                hello
-            </a>
-        </div>
-        <div class="col-md-2">
-            <a href="{% url 'shops' 4 %}" class="thumbnail">
-                <img src="{% static 'img/shop4.jpg' %}">
-                hello
-            </a>
-        </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2"></div>
+        {% endfor %}
     </div>
 {% endblock %}
-
