--- a/spares_info/templates/spares_info/catalog.html
+++ b/spares_info/templates/spares_info/catalog.html
@@ -5,10 +5,10 @@
 {% block menu %}
     <div class="col-md-2">
         <div class="list-group">
-            <a href="{% url 'info' %}" class="list-group-item">Информация</a>
-            <a href="{% url 'contacts' %}" class="list-group-item">Контакты</a>
-            <a href="{% url 'shops' %}" class="list-group-item">Магазины</a>
-            <a href="{% url 'catalog' %}" class="list-group-item active">Каталог</a>
+            <a href="{% url 'page' 'info' %}" class="list-group-item">Информация</a>
+            <a href="{% url 'page' 'contacts' %}" class="list-group-item">Контакты</a>
+            <a href="{% url 'page' 'shops' %}" class="list-group-item">Магазины</a>
+            <a href="{% url 'page' 'catalog' %}" class="list-group-item active">Каталог</a>
         </div>
         <div class="list-group">
             {% for item in catalog %}
@@ -18,7 +18,7 @@
                     </a>
                 {% else %}
                     <a href="{% url 'catalog' item.id %}" class="list-group-item">
-                    {{ item.name }}
+                        {{ item.name }}
                     </a>
                 {% endif %}
             {% endfor %}
@@ -26,7 +26,7 @@
     </div>
 {% endblock %}
 {% block body %}
-    <table class="table table-condensed table-hover">
+    <table class="table table-hover">
         {% for item in items %}
             <tr>
                 <td>
