--- a/spares_info/templates/spares_info/shops.html
+++ b/spares_info/templates/spares_info/shops.html
@@ -6,10 +6,10 @@
 {% block menu %}
     <div class="col-md-2">
         <div class="list-group">
-            <a href="{% url 'info' %}" class="list-group-item">Информация</a>
-            <a href="{% url 'contacts' %}" class="list-group-item">Контакты</a>
-            <a href="{% url 'shops' %}" class="list-group-item active">Магазины</a>
-            <a href="{% url 'catalog' %}" class="list-group-item">Каталог</a>
+            <a href="{% url 'page' 'info' %}" class="list-group-item">Информация</a>
+            <a href="{% url 'page' 'contacts' %}" class="list-group-item">Контакты</a>
+            <a href="{% url 'page' 'shops' %}" class="list-group-item active">Магазины</a>
+            <a href="{% url 'page' 'catalog' %}" class="list-group-item">Каталог</a>
         </div>
     </div>
 {% endblock %}
@@ -21,7 +21,7 @@
         <div class="col-md-3">
             <a href="{% url 'shops' shop.id %}" class="thumbnail">
                 <img src="{{ shop.photo }}">
-                {{ shop.address }}
+                <span class="text-info">{{ shop.address }}</span>
             </a>
         </div>
         {% endfor %}
