--- a/spares_info/templates/spares_info/base.html
+++ b/spares_info/templates/spares_info/base.html
@@ -7,25 +7,31 @@
     <title>{% block title %}Магазин запчастей{% endblock %}</title>
 </head>
 
-<body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="{% url 'index' %}">
-                        <img alt="Лого">
-                    </a>
-                </div>
+<body style="margin-bottom:50px">
+    {% load staticfiles %}
+<!--     <div class="container">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{% url 'index' %}">
+                    <img alt="Лого">
+                </a>
             </div>
-        </nav>
+        </div>
+    </nav> -->
+    <!-- </div> -->
+    <div class="containter-fluid" style="margin-bottom: 50px;">
+        <img src="{% static 'img/header.jpg' %}" width="100%">
+    </div>
+    <div class="container">
         <div class="row">
             {% block menu %}
                 <div class="col-md-2">
                     <div class="list-group">
-                        <a href="{% url 'info' %}" class="list-group-item">Информация</a>
-                        <a href="{% url 'contacts' %}" class="list-group-item">Контакты</a>
-                        <a href="{% url 'shops' %}" class="list-group-item">Магазины</a>
-                        <a href="{% url 'catalog' %}" class="list-group-item">Каталог</a>
+                        <a href="{% url 'page' 'info' %}" class="list-group-item">Информация</a>
+                        <a href="{% url 'page' 'contacts' %}" class="list-group-item">Контакты</a>
+                        <a href="{% url 'page' 'shops' %}" class="list-group-item">Магазины</a>
+                        <a href="{% url 'page' 'catalog' %}" class="list-group-item">Каталог</a>
                     </div>
                 </div>
             {% endblock %}
